<resources>
    <string name="request_id_token" translatable="false">120741973731-sh0bf21krjuahb5dhvv3s0igjce44dtn.apps.googleusercontent.com</string>
    <string name="prefs_file" translatable="false">com.example.eventoscompartidos.PREFERENCE_FILE_KEY</string>
    <string name="app_name" translatable="false">Holidays4Us</string>
    <string name="strCorreo">E-mail</string>
    <string name="strPasswd">Password</string>
    <string name="strIniciarSesion">Log in</string>
    <string name="strRegistrar">Sign in</string>
    <string name="strLoginGoogle">Log in with Google</string>
    <string name="strMsgLogin">Enter your user data:</string>
    <string name="strTituloAutenticacion">Authentication</string>
    <string name="strCamposVacios">Fill in the fields</string>
    <string name="strError" translatable="false">Error</string>
    <string name="strMensajeErrorAuth">An error occurred authenticating the user</string>
    <string name="strAceptar">Accept</string>
    <string name="strSuccess">success!</string>
    <string name="strInactivo">User not activated</string>
    <string name="strEliminar">Delete</string>
    <string name="strConfirmacionDeleteUser">Are you sure you want to remove this user?</string>
    <string name="strCancelar">Cancel</string>
    <string name="strWaitActivate">Registered successfully. You will be able to access as soon as one of our administrators accepts you.</string>
    <string name="strAsuntoEmailCuentaEliminada">Account deleted</string>
    <string name="strTextEmailCuentaEliminada">Your account has been deleted by one of our administrators.</string>
    <string name="strMenuAdminUsers">Manage users</string>
    <string name="strMenuAdminEvents">Manage events</string>
    <string name="strAsistentes">Assistants</string>
    <string name="strNombre">Name</string>
    <string name="strFecha">Date</string>
    <string name="strHora">Hour</string>
    <string name="strCrearEvento">Create event</string>
    <string name="strMensajeEliminarEvento">Are you sure you want to delete the event \"%s\" ?</string>
    <string name="strEventoEliminado">Removed event</string>
    <string name="strCerrarSesion">Sign out</string>
    <string name="strMsgCerrarSesion">Do you want to log out and exit the system?</string>
    <string name="strEvento" translatable="false">Evento</string>
    <string name="google_maps_key" translatable="false">AIzaSyBvzcIkG49SYz0QEJIjIrIgJmLintp0k70</string>
    <string name="strMensajeSobreMapa">Check the meeting point of the event on the map</string>
    <string name="strCambiarUbicacion">Change ubication</string>
    <string name="strMsgExpulsarUsuario">Are you sure you want to expel %s from the event?</string>
    <string name="strExpulsar">Expel</string>
    <string name="strUsuarios">users</string>
    <string name="strAlertaUsuarioNoSeleccionado">You have not selected any user</string>
    <string name="strSinUsuariosDisponibles">There are no users available for this event</string>
    <string name="strInvitacionCorrecta">%s has been invited</string>
    <string name="strDireccion">Direction</string>
    <string name="strConfirmar">Confirm</string>
    <string name="strConfirmarPuntoReunion">Are you sure to set the event to this location?</string>
    <string name="strDirNoEncontrada">The indicated address is not found</string>
    <string name="strConfirmarNuevoLugar">Are you sure to add a point of visit at this place?</string>
    <string name="strNombreLugar">Place´s name</string>
    <string name="strChangeImage">Change image</string>
    <string name="strElegirFoto">Choose photo</string>
    <string name="strMensajeElegirFoto">How do you want to add the photo?</string>
    <string name="strCamara">Camera</string>
    <string name="strGaleria">Gallery</string>
    <string name="strUsername">Username: %s</string>
    <string name="strUserRol">User rol:</string>
    <string name="strListadoEventos">Events list</string>
    <string name="strPerfil">Profile</string>
    <string name="strGestionEventos">Event management</string>
    <string name="strGestionUsuarios">Users management</string>
    <string name="strEligeRol">Choose your access rol</string>
    <string name="strApuntado">Have signed up for the event \"%s\"</string>
    <string name="strYaApuntado">You are already registered for this event</string>
    <string name="addPlaces">Add places</string>
    <string name="strMsgEliminarLugar">Are you sure to delete \"%s\"?</string>
    <string name="strConfirmarCambioUbicacionLugar">Are you sure to set this point as the new \"%s\" location?</string>
    <string name="strVerLugares">See places</string>
    <string name="strCambioLocLugar">Altered %s location</string>
    <string name="strEscribeComentario">Write your comment</string>
    <string name="strTituloComentarios">Comments for %s</string>
    <string name="strNuevoComentario">New comment for %s</string>
    <string name="strComentarioIncompleto">Impossible to comment without image or with empty comment</string>
    <string name="strNoApuntado">You are not signed up for this event</string>
    <string name="strDesapuntado">You have opted out of this event</string>
    <string name="strAgradecerPuntualidad">Thank you for your punctuality</string>
    <string name="strYaPresente">You have already indicated your presence at this event, thank you very much!</string>
    <string name="strFueraDelCirculo">You have not yet reached the meeting point</string>
    <string name="strNoEresAsistente">You are not a participant of this event</string>
    <string name="strAusente">Absent</string>
</resources>