<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionEventoDetalle">

    <ImageButton
        android:id="@+id/btnInvitarUsuario"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/rvAsistentes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/ic_add" />

    <ImageButton
        android:id="@+id/btnSalirDeEvento"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/btnInvitarUsuario"
        app:layout_constraintEnd_toEndOf="@+id/rvAsistentes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnInvitarUsuario"
        app:layout_constraintTop_toTopOf="@+id/btnInvitarUsuario"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_out" />

    <TextView
        android:id="@+id/txtMensajeUbicacionEventoDetalle"
        style="@style/textViews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/strMensajeSobreMapa"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <fragment
        android:id="@+id/fragmentMapEvento"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMensajeUbicacionEventoDetalle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnChangePuntoReunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/strCambiarUbicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragmentMapEvento"
        app:layout_constraintStart_toStartOf="@+id/fragmentMapEvento"
        app:layout_constraintTop_toBottomOf="@+id/fragmentMapEvento"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edFechaEventoDetalle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawableRight="@drawable/ic_edit"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtFecha"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edHoraEventoDetalle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:drawableRight="@drawable/ic_edit"
        android:ems="10"
        android:focusable="false"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/edFechaEventoDetalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/edFechaEventoDetalle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtFecha"
        style="@style/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/strFecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePuntoReunion"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        style="@style/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/strHora"
        app:layout_constraintBottom_toBottomOf="@+id/txtFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtFecha"
        app:layout_constraintTop_toTopOf="@+id/txtFecha"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAsistentes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        style="@style/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/strAsistentes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edFechaEventoDetalle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>